Minor code edits